--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
+.idea
+*.DS_Store
+/coverage
+sftp-config.json
+composer.lock
+.subsplit
+.php_cs.cache
+
 # Laravel 4 specific
 bootstrap/compiled.php
 app/storage/
