--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "^7.2"
+        "guzzlehttp/guzzle": "^7.0.0",
+        "laravel/framework": "^8.0"
     }
 }
