--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,15 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Iscxy\\Dingtalk\\": "src"
+            "Iscxy\\Dingtalk\\": "./src"
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0"
+        "guzzlehttp/guzzle": "^7",
+        "laravel/framework": "^8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7",
+        "mockery/mockery": "^1"
     }
 }
