--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,12 @@
     "require-dev": {
         "phpunit/phpunit": "^7",
         "mockery/mockery": "^1"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Iscxy\\Dingtalk\\DingtalkServiceProvider"
+            ]
+        }
     }
 }
